OWL-5050 Forums: Fixed the alignment of the Topic Actions buttons on the main page

--- a/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
+++ b/msgcntr/messageforums-app/src/webapp/css/msgcntr.css
@@ -128,6 +128,9 @@ h2 + .forumsCollapseTrigger,
 	border-right: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
 }
+.forumTopic .actionsColumn {
+	flex-grow: 0;
+}
 @media only screen and (max-width:1100px) {
 	.forumsTopics .forumTopic {
 		display: grid;
